--- a/client/src/components/HelloSection.css
+++ b/client/src/components/HelloSection.css
@@ -1,29 +1,29 @@
-.hero-section-container {
+.hello-section-container {
     display: flex;
     align-items: center;
     justify-content: space-around;
     background-color: #FEF3D5;
     width: 95%;
     margin: 0 auto;
-    border-radius: 15px;
+    border-radius: 17px;
     margin-top: 100px;
     margin-bottom: 100px;
   }
-  .hero-section-container > div {
+  .hello-section-container > div {
     flex: 50%;
   }
-  .hero-section-text {
+  .hello-section-text {
     margin-left: 100px;
   }
   
-  .hero-section-text > h2 {
+  .hello-section-text > h2 {
     color: #A56535;
     text-align: left;
     font-weight: bold;
     line-height: 3;
   }
   
-  .hero-section-text > p {
+  .hello-section-text > p {
     font-weight: 600;
   }
   .view-btn {
@@ -41,11 +41,11 @@
     color: #f6f6f6;
   }
   
-  .hero-section-image {
+  .hello-section-image {
     width: 30%;
   }
   
-  .hero-section-image > img {
+  .hello-section-image > img {
     width: 50%;
     width: 400px;
     height: 400px;
